--- a/_config.yml
+++ b/_config.yml
@@ -19,41 +19,18 @@ description: >- # this means to ignore newlines until "baseurl:"
   Engineer by passion, Researcher at heart.
 twitter_username: amritk110
 github_username: amrit110
-minimal_mistakes_skin: dark
 search: true
 
 # Build settings
-markdown: kramdown
-remote_theme: mmistakes/minimal-mistakes
-# Outputting
-permalink: /:categories/:title/
-paginate: 5 # amount of posts to show
-paginate_path: /page:num/
-timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+remote_theme: "mmistakes/minimal-mistakes"
+minimal_mistakes_skin: dark
+plugins:
+  - jekyll-remote-theme
+  - jekyll-include-cache
+  - jemoji
 
 include:
   - _pages
-
-# Exclude from processing.
-# The following items will not be processed, by default. Create a custom list
-# to override the default setting.
-# exclude:
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
-
-# Plugins (previously gems:)
-plugins:
-  - jekyll-paginate
-  - jekyll-sitemap
-  - jekyll-gist
-  - jekyll-feed
-  - jemoji
-  - jekyll-include-cache
 
 author:
   name   : "Amrit"
@@ -98,10 +75,3 @@ defaults:
     values:
       layout: single
       author_profile: true
-
-category_archive:
-  type: liquid
-  path: /categories/
-tag_archive:
-  type: liquid
-  path: /tags/
