--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ github_username: amrit110
 search: true
 
 # Build settings
-remote_theme: "mmistakes/minimal-mistakes"
+remote_theme: "mmistakes/minimal-mistakes@4.21.0"
 minimal_mistakes_skin: dark
 plugins:
   - jekyll-remote-theme
