--- a/_config.yml
+++ b/_config.yml
@@ -1,65 +1,38 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-title: Amrit
-# email:
-description: >- # this means to ignore newlines until "baseurl:"
-  Engineer by passion, Researcher at heart.
-twitter_username: amritk110
-github_username: amrit110
+include: ["_pages"]
 search: true
 
+defaults:
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: single
+      toc: true
+      author_profile: true
+      read_time: true
+      toc: true
+
+title: Amrit
+description: >-
+  Random musings about programming, tech and engineering.m
+twitter_username: amritk110
+github_username:  amrit110
+
 # Build settings
-remote_theme: "mmistakes/minimal-mistakes@4.21.0"
+remote_theme: "mmistakes/minimal-mistakes"
 minimal_mistakes_skin: dark
 plugins:
   - jekyll-remote-theme
   - jekyll-include-cache
   - jemoji
 
-include:
-  - _pages
-
 author:
-  name   : "Amrit"
-  avatar : "/assets/images/bio-photo.png"
-  bio    : "Coding..."
+  name: "Amrit"
+  avatar: /assets/images/avatar.jpg
+  bio: >
+    I'm an engineer who likes to play around with challenging problems involving programming.<br><br>
+    This is where I can share my thoughts and encounters with problems in engineering.
+  location: "Earth"
   links:
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/amritk110"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
+    - label: "github"
       url: "https://github.com/amrit110"
-
-defaults:
-  # _posts
-  - scope:
-      path: ""
-      type: posts
-    values:
-      layout: single
-      author_profile: true
-      read_time: true
-      comments: true
-      share: true
-      related: true
-  # _pages
-  - scope:
-      path: "_pages"
-      type: pages
-    values:
-      layout: single
-      author_profile: true
