--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ plugins:
 
 author:
   name: "Amrit"
-  avatar: /assets/images/avatar.jpg
+  avatar: /assets/images/bio-photo.png
   bio: >
     I'm an engineer who likes to play around with challenging problems involving programming.<br><br>
     This is where I can share my thoughts and encounters with problems in engineering.
