--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ defaults:
 
 title: Amrit
 description: >-
-  Random musings about programming, tech and engineering.m
+  Random musings about programming, tech and engineering.
 twitter_username: amritk110
 github_username:  amrit110
 
