--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ author:
   avatar: /assets/images/bio-photo.png
   bio: >
     I'm an engineer who likes to play around with challenging problems involving programming.<br><br>
-    This is where I can share random thoughts and encounters with problems in engineering.
+    This is where I can share random thoughts or specific encounters with problems or amusing stories in engineering.
   location: "Earth"
   links:
     - label: "github"
