--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ author:
   bio: >
     I'm an engineer who likes to play around with challenging problems involving programming.<br><br>
     This is where I can share random thoughts or specific encounters with problems or amusing stories in engineering.
-  location: "Earth"
+  location: "Montreal"
   links:
     - label: "github"
       icon: "fab fa-fw fa-github"
